[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quest2ros-server"
version = "0.1.0"
description = "Dual-arm Quest2ROS motion server for trigger-relative teleoperation."
requires-python = ">=3.9"
dependencies = []

[project.scripts]
quest2ros-server = "quest2ros_server.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quest2ros_server*"]
